# vkcheck

./: .clang-format  .env  .gitignore  .gitmodules  .notes.txt.swp  CMakeLists.txt  CMakePresets.json  Justfile  README.md  notes.txt  vcpkg-configuration.json
src/: main.cpp
